[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olostep-spark"
version = "0.1.0"
description = "Apache Spark UDFs for web enrichment powered by Olostep"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Olostep", email = "info@olostep.com" }]
keywords = [
    "olostep", "spark", "pyspark", "web-enrichment",
    "web-scraping", "data-engineering", "udf", "sql"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "olostep>=0.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.4.0",
    "pandas>=1.5.0",
    "pyarrow>=12.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyspark>=3.4.0",
    "pandas>=1.5.0",
    "pyarrow>=12.0.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/olostep-api/olostep-spark"
Documentation = "https://docs.olostep.com/data-integrations/spark"

[tool.setuptools.packages.find]
where = ["."]
include = ["olostep_spark*"]
[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring real API keys",
]
asyncio_mode = "strict"